--- a/MyProj/Views/User/Reg.cshtml
+++ b/MyProj/Views/User/Reg.cshtml
@@ -2,7 +2,72 @@
 @{
     ViewBag.Title = "Reg";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    
 }
 
-<h2>Reg</h2>
+@if (ViewBag.RegPage == 1)
 
+{
+    <div>
+        <form action="/User/Reg2" method="post">
+            <label>Email:  </label><input type="email" name="email" value="@ViewBag.Email" /><br /><br />
+             <label>Password:  </label><input type="password" name="password" value="" /><br /> <br />
+             <label>Confirm password</label><input type="password" name="confirmpassword" value="" /><br /><br />
+             <button type="submit">Далее</button>
+        </form>
+    </div>
+}
+@if (ViewBag.RegPage == 2)
+{
+    <div>
+        <form action="/User/Reg3" method="post">
+            <label>Name</label><input type="text" name="name" value="" /><br /><br />
+            <label>Surname</label><input type="text" name="surname" value="" /><br /><br />
+            <label>Date of birthday</label><input type="date" name="dob" value="" /><br /><br />
+            <label>City</label>
+            <select name="city">
+                <option value="0" selected>Краснодар</option>
+                <option value="1">Москва</option>
+                <option value="2">Санкт-Петербург</option>
+                <option value="3">Киев</option>
+                <option value="4">Новороссийск</option>
+                <option value="5">Сочи</option>
+            </select><br /><br />
+            <label>Gender</label>
+            <select name="gender">
+                <option value="0">Male</option>
+                <option value="1">Female</option>
+            </select><br /><br />
+            <button type="submit">Далее</button>
+
+        </form>
+    </div>
+}
+@if (ViewBag.RegPage == 3)
+{
+    <div>
+        <div>Тут у нас будет лицензионное соглашение</div>
+        <form action="/User/Reg4" method="post">
+            <button type="submit" class="btn btn-success">Принимаю</button>
+        </form>
+    </div>
+}
+@if (ViewBag.RegPage == 4)
+{
+    <div>
+        Поздравляю @ViewBag.Name с успешной регистрацией!!!!!!Салюты!!!Фанфары!!!!
+    </div>
+}
+@if(ViewBag.RegPage == 5)
+{
+    <div>
+        Произошла ошибка при выполнении <br />
+        Имя - @Session["name"] <br />
+        Фамилия - @Session["surname"] <br />
+        Мыло - @Session["email"] <br />
+        Дата рождения - @Session["dob"] <br />
+
+
+
+    </div>
+}
